0527 파일명 변경

--- a/_posts/2023-05-12-기초문법-Python-함수(1)-문자열.md
+++ b/_posts/2023-05-12-기초문법-Python-함수(1)-문자열.md
@@ -1,6 +1,6 @@
 ---
-title: "[Python 문법] 문자열 함수"
-excerpt: "0512 Python 문자열 함수"
+title: "[Python 문법] 함수(1) - 문자열"
+excerpt: "0512 Python 함수(1) - 문자열"
 
 categories:
   - Python 문법
