--- a/_posts/2023-05-31-기초문법-데이터분석-시각화 도구(2) - Matplotlib(2).md
+++ b/_posts/2023-05-31-기초문법-데이터분석-시각화 도구(2) - Matplotlib(2).md
@@ -1,13 +1,13 @@
 ---
-title: "[Python] 시각화 도구(2) - Matplotlib"
-excerpt: "0531 시각화 도구(2) - Matplotlib"
+title: "[Python] 시각화 도구(2) - Matplotlib(2)"
+excerpt: "0531 시각화 도구(2) - Matplotlib(2)"
 
 categories:
   - 데이터 분석
 tags:
   - []
 
-permalink: /DA/lesson4/
+permalink: /DA/lesson4-2/
 
 toc: true
 toc_sticky: ture
@@ -15,336 +15,6 @@ toc_sticky: ture
 date: 2023-05-31
 last_modified_at: 2023-06-04
 ---
-
-- 한글 폰트 설치
-
-```python
-!sudo apt-get install -y fonts-nanum
-!sudo fc-cache -fv
-!rm ~/.cache/matplotlib -rf
-```
-
-- 데이터 불러오기
-
-```python
-import pandas as pd
-df = pd.read_excel('/content/drive/MyDrive/hana1/PYTHON/data/시도별 전출입 인구수.xlsx', engine = 'openpyxl')
-
-# NaN값 채우기, ffill: 바로 위 값과 동일하게 설정
-df = df.fillna(method = 'ffill')
-
-# 서울시(전출지)에서 다른 지역(전입지)으로 이동한 인구 데이터
-b_index = (df['전출지별'] == '서울특별시') & (df['전입지별'] != '서울특별시')
-df_seoul = df[b_index]
-
-# 전출지별 열 삭제
-df_seoul = df_seoul.drop('전출지별', axis = 1)
-
-# 열 이름 변경
-df_seoul = df_seoul.rename({'전입지별':'전입지'}, axis = 1)
-
-# 행 인덱스 변경
-df_seoul = df_seoul.set_index('전입지')
-
-# 전입지가 경기도인 경우만 추출
-df_ggd = df_seoul.loc['경기도']
-df_ggd.head()
---------------------------------------------------------
-# 1970    130149
-# 1971    150313
-# 1972     93333
-# 1973    143234
-# 1974    149045
-# Name: 경기도, dtype: object
-```
-
-## 그래프 생성 (선 그래프)
-
-```python
-import matplotlib.pyplot as plt
-plt.plot(df_ggd.index, df_ggd.values)
-```
-
-```python
-# 시리즈 데이터를 넣고 시각화해도 결과는 동일
-plt.plot(df_ggd)
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/33e698ed-4204-4974-a43e-0f426ee5b751)
-
-
-## 차트 제목, 축 제목 추가
-
-```python
-# 한글 폰트 지정
-plt.rc('font', family = 'NanumGothic')
-
-# 선 그래프
-plt.plot(df_ggd.index, df_ggd.values)
-
-# 차트 제목 추가
-plt.title("서울시에서 경기도로 이동하는 인구")
-
-# 축 제목 추가
-plt.xlabel('기간(연도)')
-plt.ylabel('이동 인구 수')
-plt.show()
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/d8784cb1-ca4b-4e0f-9ce5-57f81d099aed)
-
-## 그래프 꾸미기
-
-```python
-# 그림 사이즈 지정(가로, 세로)
-plt.figure(figsize = (13,5))
-
-# x축 눈금 라벨 회전
-plt.xticks(rotation = 'vertical')
-
-# 선 그래프
-plt.plot(df_ggd.index, df_ggd.values)
-
-# 차트 제목 추가
-plt.title("서울시에서 경기도로 이동하는 인구")
-
-# 축 제목 추가
-plt.xlabel('기간(연도)')
-plt.ylabel('이동 인구 수')
-
-# 범례 추가
-plt.legend(labels = ['서울시 => 경기도'], loc = 'best')
-plt.show()
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/bd5515be-ce73-43ae-81e2-5eef5e2c8196)
-
-## 스타일 서식
-
-```python
-plt.style.available
------------------------
-# ['Solarize_Light2',
-#  '_classic_test_patch',
-#  '_mpl-gallery',
-#  '_mpl-gallery-nogrid',
-#  'bmh',
-#  'classic',
-#  'dark_background',
-#  'fast',
-#  'fivethirtyeight',
-#  'ggplot',
-#  'grayscale',
-#  'seaborn-v0_8',
-#  'seaborn-v0_8-bright',
-#  'seaborn-v0_8-colorblind',
-#  'seaborn-v0_8-dark',
-#  'seaborn-v0_8-dark-palette',
-#  'seaborn-v0_8-darkgrid',
-#  'seaborn-v0_8-deep',
-#  'seaborn-v0_8-muted',
-#  'seaborn-v0_8-notebook',
-#  'seaborn-v0_8-paper',
-#  'seaborn-v0_8-pastel',
-#  'seaborn-v0_8-poster',
-#  'seaborn-v0_8-talk',
-#  'seaborn-v0_8-ticks',
-#  'seaborn-v0_8-white',
-#  'seaborn-v0_8-whitegrid',
-#  'tableau-colorblind10']
-```
-
-```python
-# 스타일 서식
-plt.style.use('ggplot')
-
-# 그림 사이즈 지정(가로, 세로)
-plt.figure(figsize = (13,5))
-
-# x축 눈금 라벨 회전
-plt.xticks(rotation = 'vertical')
-
-# 선 그래프
-plt.plot(df_ggd.index, df_ggd.values)
-
-# 차트 제목 추가
-plt.title("서울시에서 경기도로 이동하는 인구")
-
-# 축 제목 추가
-plt.xlabel('기간(연도)')
-plt.ylabel('이동 인구 수')
-
-# 범례 추가
-plt.legend(labels = ['서울시 => 경기도'], loc = 'best')
-plt.show()
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/b9ad7304-c106-4235-8f21-a6eb2ae1c3c4)
-
-## 주석 추가
-
-```python
-# 스타일 서식
-plt.style.use('ggplot')
-
-# 그림 사이즈 지정(가로, 세로)
-plt.figure(figsize = (13,5))
-
-# x축 눈금 라벨 회전
-plt.xticks(rotation = 'vertical')
-
-# 선 그래프
-plt.plot(df_ggd.index, df_ggd.values)
-
-# 차트 제목 추가
-plt.title("서울시에서 경기도로 이동하는 인구")
-
-# 축 제목 추가
-plt.xlabel('기간(연도)')
-plt.ylabel('이동 인구 수')
-
-# 범례 추가
-plt.legend(labels = ['서울시 => 경기도'], loc = 'best', fontsize = 15)
-
-# y축 범위 조정
-plt.ylim(50000,800000)
-
-# 주석 추가
-# 화살표
-plt.annotate('', xy = (23,620000), # 화살표 머리
-             xytext = (3,250000), # 화살표 꼬리
-             xycoords = 'data', # 좌표계
-             arrowprops = dict(arrowstyle = '->', color = 'red', lw = 10))
-plt.annotate('', xy = (45,400000), # 화살표 머리
-            xytext = (29,620000), # 화살표 꼬리
-             xycoords = 'data', # 좌표계
-             arrowprops = dict(arrowstyle = '->', color = 'blue', lw = 10))
-
-# 텍스트 추가
-plt.annotate('인구 이동 증가',
-             xy = (12, 400000), # 텍스트 시작 위치
-             rotation = 25, # 회전
-             va = 'baseline', # 위아래 정렬
-             ha = 'center', # 좌우로 정
-             fontsize = 15)
-plt.annotate('인구 이동 감소',
-             xy = (37, 510000), # 텍스트 시작 위치
-             rotation = -18, # 회전
-             va = 'baseline', # 위아래 정렬
-             ha = 'center', # 좌우로 정
-             fontsize = 15)
-
-plt.show()
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/8aca4f11-420e-4aaa-a88b-7539e141d815)
-
-## 화면 분할
-
-```python
-df_4 = df_seoul.loc[['충청남도','경상북도','강원도','전라남도']]
-col_years = list(map(str, range(1970,2018)))
-
-# 그래프 객체 만들기
-fig = plt.figure(figsize = (20,10))
-ax1 = fig.add_subplot(2,2,1) # 행 개수, 열 개수, 위치
-ax2 = fig.add_subplot(2,2,2)
-ax3 = fig.add_subplot(2,2,3)
-ax4 = fig.add_subplot(2,2,4)
-
-# axe 객체에 그래프 추가
-ax1.plot(col_years, df_4.loc['충청남도',:], marker = 'o', markerfacecolor = 'green',
-         markersize = 5, color = 'green', label = '서울 => 충남')
-ax2.plot(col_years, df_4.loc['경상북도',:], marker = 'o', markerfacecolor = 'red',
-         markersize = 5, color = 'red', label = '서울 => 경북')
-ax3.plot(col_years, df_4.loc['강원도',:], marker = 'o', markerfacecolor = 'yellow',
-         markersize = 5, color = 'yellow', label = '서울 => 강원')
-ax4.plot(col_years, df_4.loc['전라남도',:], marker = 'o', markerfacecolor = 'blue',
-         markersize = 5, color = 'blue', label = '서울 => 전남')
-
-# 범례 추가
-ax1.legend(loc = 'best')
-ax2.legend(loc = 'best')
-ax3.legend(loc = 'best')
-ax4.legend(loc = 'best')
-
-# x축 눈금 라벨 회전
-ax1.set_xticklabels(col_years, rotation = 90)
-ax2.set_xticklabels(col_years, rotation = 90)
-ax3.set_xticklabels(col_years, rotation = 90)
-ax4.set_xticklabels(col_years, rotation = 90)
-
-# y축 범위 조정
-ax1.set_ylim(0,60000)
-ax2.set_ylim(0,60000)
-ax3.set_ylim(0,60000)
-ax4.set_ylim(0,60000)
-
-# 스타일 서식
-plt.style.use('ggplot')
-
-plt.show()
-```
-![image](https://github.com/JS042/cs231n/assets/84077022/760258cd-4142-41d8-997c-e57350265fdb)
-
-```python
-# 한글 폰트 지정
-plt.rc('font', family = 'NanumGothic')
-
-# 스타일 서식
-plt.style.use('ggplot')
-
-# 그래프 객체 생성
-fig = plt.figure(figsize = (10,10))
-ax1 = fig.add_subplot(2,1,1) # 행의 개수, 열의 개수, 위치
-ax2 = fig.add_subplot(2,1,2)
-
-# 객체에 그래프 출력
-ax1.plot(df_ggd, marker = 'o', markersize = 10)
-ax2.plot(df_ggd, marker = 'o', markersize = 10,
-         markerfacecolor = 'green', color = 'lightgreen', linewidth = 5, label = '서울 => 경기')
-# ax2 객체에 범례 추가
-ax2.legend(loc = 'best')
-
-# y축 범위 조정
-ax1.set_ylim(0,700000)
-ax2.set_ylim(0,700000)
-
-# x축 눈금 라벨 회전
-ax1.set_xticklabels(df_ggd.index, rotation = 75)
-ax2.set_xticklabels(df_ggd.index, rotation = 75)
-
-# 차트 제목 추가
-ax2.set_title('서울시에서 경기도로 이동한 인구', size = 15)
-
-# 축 이름 추가
-ax2.set_xlabel('기간(연도)', size = 10)
-ax2.set_ylabel('이동 인구 수', size = 10)
-
-# 축 눈금 라벨 크기 수정
-ax1.tick_params(axis = 'both', labelsize = 8)
-
-plt.show()
-```
-
-![image](https://github.com/JS042/cs231n/assets/84077022/57a657cb-ed1e-4b8a-9367-a5dd8d20f3e8)
-
-## 색상 & 헥스 코드
-
-```python
-import matplotlib
-colors = {}
-
-for i,j in matplotlib.colors.cnames.items():
-  colors[i] = j
-
-print(colors)
--------------------------------------------
-# {'aliceblue': '#F0F8FF',
-#  'antiquewhite': '#FAEBD7',
-#  'aqua': '#00FFFF',
-#  'aquamarine': '#7FFFD4',
-#  'azure': '#F0FFFF',
-#  'beige': '#F5F5DC',
-#  'bisque': '#FFE4C4',
-#  'black': '#000000',
-# ...}
-```
 
 ## 면적 그래프
 
